--- a/perfis/desbravador.html
+++ b/perfis/desbravador.html
@@ -11,7 +11,7 @@
 <body class="desbravador">
   <div class="container desbravador">
     <h1> Perfil Desbravador </h1>
-    <h1> O Visionário e Analítico </h1>
+    <h1> O Idealista e Analítico </h1>
 
     <img class="medalha-animada desbravador" src="img/MedalhaDesbravador_upscaled.png" alt="Medalha Desbravador">
 
