--- a/perfis/desbravador.html
+++ b/perfis/desbravador.html
@@ -36,7 +36,9 @@
       <li>Dificuldade em lidar com erros próprios.</li>
       <li>Podem ser perfeccionistas demais.</li>
     </ul>
-    
+
+    <p><strong>Ambiente ideal:</strong> inovador, flexível e que valorize autonomia e propósito.</p>
+   
     <div class="chart-container">
       <h2 class="chart-title">Seu Perfil de Personalidade</h2>
       <canvas id="personalityChart"></canvas>
