--- a/perfis/comandante.html
+++ b/perfis/comandante.html
@@ -15,21 +15,21 @@
 
     <img class="medalha-animada comandante" src="img/MedalhaComandante_upscaled.png" alt="Medalha Comandante" />
 
-    <p>Caracteristicas Principais:</p>
+    <p><strong>Caracteristicas Principais:</strong></p>
     <ul>
       <li>Valorizam trabalho em equipe e lealdade.</li>
       <li>São bons ouvintes e buscam harmonia nos relacionamentos.</li>
       <li>Demonstram forte espírito de grupo e senso de pertencimento.</li>
       <li>Costumam ser planejadores e pensar a longo prazo.</li>
     </ul>
-    <p>Pontos Fortes:</p>
+    <p><strong>Pontos Fortes:</strong></p>
     <ul>
       <li>Trabalham bem em equipe.</li>
       <li>Capacidade de mediação de conflitos.</li>
       <li>Alto nível de empatia e preocupação com o bem-estar dos outros.</li>
       <li>Estratégicos, pensam antes de agir.</li>
     </ul>
-    <p>Pontos de Atenção:</p>
+    <p><strong>Pontos de Atenção:</strong></p>
     <ul>
       <li>Podem evitar confrontos mesmo quando necessários.</li>
       <li>Às vezes hesitam em tomar decisões difíceis por medo de afetar o grupo.</li>
