--- a/perfis/desbravador.html
+++ b/perfis/desbravador.html
@@ -15,21 +15,21 @@
 
     <img class="medalha-animada desbravador" src="img/MedalhaDesbravador_upscaled.png" alt="Medalha Desbravador">
 
-    <p>Caracteristicas Principais:</p>
+    <p><strong>Caracteristicas Principais:</strong></p>
     <ul>
       <li>São focados em visão estratégica e conhecimento.</li>
       <li>Observadores, gostam de ver o todo e compreender o “porquê” das coisas.</li>
       <li>Preferem dados e fatos antes de tomar decisões.</li>
       <li>Valorizam a autonomia e a qualidade intelectual.</li>
     </ul>
-    <p>Pontos Fortes:</p>
+    <p><strong>Pontos Fortes:</strong></p>
     <ul>
       <li>Pensamento crítico e lógico.</li>
       <li>Capacidade de análise e planejamento.</li>
       <li>Independência e foco em inovação.</li>
       <li>Antecipam problemas e oportunidades com facilidade.</li>
     </ul>
-    <p>Pontos de Atenção:</p>
+    <p><strong>Pontos de Atenção:</strong></p>
     <ul>
       <li>Podem parecer frios ou distantes emocionalmente.</li>
       <li>Tendem à análise excessiva (paralisia pela análise).</li>
