--- a/perfis/explorador.html
+++ b/perfis/explorador.html
@@ -15,21 +15,21 @@
 
     <img class="medalha-animada explorador" src="img/MedalhaExplorador_upscaled.png" alt="Medalha Explorador" />
 
-    <p>Caracteristicas Principais:</p>
+    <p><strong>Caracteristicas Principais:</strong></p>
     <ul>
       <li>Sensíveis, introspectivos e observadores silenciosos.</li>
       <li>Valorizam a liberdade e o tempo para reflexão.</li>
       <li>Preferem evitar conflitos e situações de confronto.</li>
       <li>Têm forte intuição e percepção do ambiente.</li>
     </ul>
-    <p>Pontos Fortes:</p>
+    <p><strong>Pontos Fortes:</strong></p>
     <ul>
       <li>Criativos e originais.</li>
       <li>Empáticos e bons ouvintes.</li>
       <li>Capacidade de adaptação..</li>
       <li>Excelentes em captar emoções e sutilezas.</li>
     </ul>
-    <p>Pontos de Atenção:</p>
+    <p><strong>Pontos de Atenção:</strong></p>
     <ul>
       <li>Tendência ao isolamento ou à introspecção excessiva.</li>
       <li>Dificuldade em lidar com ambientes altamente controladores.</li>
