--- a/perfis/navegador.html
+++ b/perfis/navegador.html
@@ -15,21 +15,21 @@
 
     <img class="medalha-animada navegador" src="img/MedalhaNavegador_upscaled.png" alt="Medalha Navegador" />
 
-    <p>Caracteristicas Principais:</p>
+    <p><strong>Caracteristicas Principais:</strong></p>
     <ul>
       <li>Tem foco em resultados, metas e eficiência.</li>
       <li>Agem de maneira objetiva e prática.</li>
       <li>Costumam ser vistos como líderes naturais ou dominantes.</li>
       <li>Preferem resolver rapidamente os problemas, sem rodeios.</li>
     </ul>
-    <p>Pontos Fortes:</p>
+    <p><strong>Pontos Fortes:</strong></p>
     <ul>
       <li>Determinados, não desistem fácil.</li>
       <li>Sabem tomar decisões sob pressão.</li>
       <li>Diretos na comunicação.</li>
       <li>Ambição e impulso para alcançar objetivos.</li>
     </ul>
-    <p>Pontos de Atenção:</p>
+    <p><strong>Pontos de Atenção:</strong></p>
     <ul>
       <li>Podem parecer insensíveis ou autoritários.</li>
       <li>Tendência ao individualismo.</li>
